# docs/swagger.yml
@@ -153,14 +153,33 @@ components:
         amount:
           type: integer
           example: 5000
+        subwallets:
+          type: object
+          properties:
+            usd: 
+              type: number
+              example: 100
+            ng: 
+              type: number,
+              example: 50
+            gdp: 
+              type: number,
+              example: 100
+            yuan: 
+              type: number,
+              example: 2000
     Deposit:
       type: object
       required:
         - userId
         - amount
+        - currency
       properties:
         userId:
           type: string
+        currency:
+          type: string
+          description: usd | ngn | gdp | yuan
         amount:
           type: integer
           example: 5000
@@ -170,12 +189,16 @@ components:
         - userId
         - amount
         - recepientAccountId
+        - currency
       properties:
         userId:
           type: string
         recepientAccountId:
           type: string
           description: Account Id of recepient
+        currency:
+          type: string
+          description: usd | ngn | gdp | yuan
         amount:
           type: integer
           example: 5000
