# src/schemas/requests/postDeposit.ts
@@ -1,5 +1,6 @@
 import { z } from "zod";
+import {CURRENCY} from "../../const/const";
 
-export const PostDepositRequestSchema = z.object({ amount: z.number().positive(), userId: z.string() }).strict();
+export const PostDepositRequestSchema = z.object({ amount: z.number().positive(), userId: z.string(), currency: z.nativeEnum(CURRENCY) }).strict();
 
 export type PostDepositRequest = z.infer<typeof PostDepositRequestSchema>;
